<resources>
    <string name="app_name">Cartões</string>
    <string name="situacao">Situação:</string>
    <string name="saldo_limite">Saldo/Limite:</string>
    <string name="bloquear_cartao">Bloquear Cartão</string>
    <string name="progress_title">Carregando...</string>
    <string name="progress_message">Por favor, aguarde.</string>
    <string name="error_generic_title">Não foi possível concluir</string>
    <string name="error_generic_message">Estamos trabalhando para resolver. Tente novamente em alguns instantes.</string>
    <string name="error_understood">Entendi</string>
    <string name="cards_empty_title">Você não possui nenhum cartão</string>
    <string name="cards_empty_message">Conheça os Cartões Internacionais do PagSeguro.</string>
</resources>