<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="**** **** **** 1234"
        android:textSize="20sp"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/imgBrand"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <ImageView
        android:id="@+id/imgBrand"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/cardView2" />

    <TextView
        android:id="@+id/tv_situacao_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="32dp"
        android:text="@string/situacao"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/tv_situacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        tools:text="Ativo"
        app:layout_constraintStart_toEndOf="@+id/tv_situacao_desc"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/tv_saldo_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/saldo_limite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_situacao_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_situacao_desc" />

    <TextView
        android:id="@+id/tv_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="R$  -"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_saldo_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_situacao"
        tools:text="R$ 0,00" />

    <Switch
        android:id="@+id/swtBlockCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/bloquear_cartao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saldo_desc" />


</androidx.constraintlayout.widget.ConstraintLayout>